--- a/diary/src/components/Record/Record.css
+++ b/diary/src/components/Record/Record.css
@@ -1,8 +1,19 @@
+html
+{
+    height: 100%;
+}
+
+body
+{
+    height: inherit;
+}
+
 .record
 {
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: inherit;
 }
 
 .record__container
@@ -14,6 +25,7 @@
     font-family: 'IBM Plex Sans', sans-serif;
 
     width: fit-content;
+    height: inherit;
 }
 
 .record__header
@@ -22,7 +34,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    margin: 50px 0 30px 0;
+    margin-top: 50px;
 }
 
 .record__date
@@ -62,7 +74,6 @@
     height: 60px;
     padding-left: 12px;
     font-weight: 700;
-
 }
 
 .record__input_text
@@ -71,10 +82,9 @@
     resize: none;
     font-size: 30px;
     width: 79vw;
-    height: 70vh;
-    margin-bottom: 28px;
-    padding-top: 10px;
-    padding-left: 12px;
+    height: 100%;
+    margin: 30px 0;
+    padding: 10px 12px 0 12px;
 }
 
 .record__input_submit
@@ -85,4 +95,6 @@
     height: 60px;
     text-align: center;
     font-size: 36px;
+    line-height: 60px;
+    margin-bottom: 50px;
 }
