--- a/diary/src/components/dayCard/DayCard.css
+++ b/diary/src/components/dayCard/DayCard.css
@@ -6,6 +6,8 @@
     background: #ffffff;
     border: 3px solid #000000;
     box-sizing: border-box;
+
+    cursor: pointer;
 }
 
 .day-card__container
@@ -79,7 +81,8 @@
     align-items: center;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: dark)
+{
     .day-card
     {
         background: #191919;
