--- a/diary/src/components/record/Record.css
+++ b/diary/src/components/record/Record.css
@@ -64,6 +64,7 @@ body
 {
     font-style: italic;
     color: #bfbfbf;
+    opacity: 0.5;
 }
 
 .record__input_title
@@ -72,7 +73,7 @@ body
     font-size: 36px;
     width: 350px;
     height: 60px;
-    padding-left: 12px;
+    padding: 0 12px;
     font-weight: 700;
 }
 
@@ -97,4 +98,29 @@ body
     font-size: 36px;
     line-height: 60px;
     margin-bottom: 50px;
+}
+
+@media (prefers-color-scheme: dark)
+{
+    .record__date
+    {
+        color: white;
+    }
+
+    .record__input_text, .record__input_title
+    {
+        background: #191919;
+        border-color: white;
+    }
+
+    .record__input::placeholder
+    {
+        color: white;
+    }
+
+    .record__input_submit
+    {
+        background: white;
+        color: black;
+    }
 }
