--- a/diary/src/components/record/Record.css
+++ b/diary/src/components/record/Record.css
@@ -88,8 +88,33 @@ body
     padding: 10px 12px 0 12px;
 }
 
+.record__buttons
+{
+    display: flex;
+    margin-bottom: 50px;
+}
+
+.record__input_cancel
+{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    background: white;
+    border: 3px solid #000000;
+    width: 250px;
+    height: 60px;
+    text-align: center;
+    font-size: 36px;
+    line-height: 60px;
+    cursor: pointer;
+    margin-right: 100px;
+}
+
 .record__input_submit
 {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
     background: black;
     color: white;
     width: 250px;
@@ -97,7 +122,7 @@ body
     text-align: center;
     font-size: 36px;
     line-height: 60px;
-    margin-bottom: 50px;
+    cursor: pointer;
 }
 
 @media (prefers-color-scheme: dark)
@@ -116,6 +141,12 @@ body
     .record__input::placeholder
     {
         color: white;
+    }
+
+    .record__input_cancel
+    {
+        background: #191919;
+        border-color: white;
     }
 
     .record__input_submit
