--- a/diary/src/components/dayCard/DayCard.css
+++ b/diary/src/components/dayCard/DayCard.css
@@ -1,21 +1,15 @@
 .day-card
 {
-    width: 160px;
-    height: 200px;
-
-    background: #ffffff;
-    border: 3px solid #000000;
-    box-sizing: border-box;
-
+    display: flex;
+    justify-content: center;
     cursor: pointer;
 }
 
 .day-card__container
 {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
+    display: inline-block;
+    border-left: 3px solid #000000;
+    height: 30px;
 }
 
 .day-card__num
@@ -75,10 +69,9 @@
 
 .day-card__img
 {
-    height: 124px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: inline-block;
+    border-left: 3px solid #000000;
+    height: 30px;
 }
 
 @media (prefers-color-scheme: dark)
